ARROW-7734: [C++] check status details for nullptr in equality

When checking statuses for equality, check to make sure that both have status detail objects before proceeding to compare those objects.

Closes #6332 from lidavidm/arrow-7734 and squashes the following commits:

9084bcec7 <David Li> ARROW-7734:  check status details for nullptr in equality

Authored-by: David Li <li.davidm96@gmail.com>
Signed-off-by: Micah Kornfield <emkornfield@gmail.com>